@@ -1,3 +1,7 @@
+2012/03/16:
+	* Fix ReadMe.
+	* Clearer copyright.
+
 2012/03/01:
 	* Report failure to register slash commands.
 
